--- a/My_ML_Practice1.ipynb
+++ b/My_ML_Practice1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+1i/rOrn2vpaHG8JB1Coa",
+      "authorship_tag": "ABX9TyPfytq7TTE/kOTXEqBET3pS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -423,7 +423,7 @@
       "metadata": {
         "id": "i13ENqYYA7Iq"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -434,7 +434,7 @@
       "metadata": {
         "id": "UmW-c0CkRXdT"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -446,45 +446,20 @@
       "metadata": {
         "id": "yPSAp7WWfl9p"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X['Age'].fillna(X['Age'].median(), inplace=True)\n",
-        "X['Embarked'].fillna(X['Embarked'].mode()[0], inplace=True)"
+        "X.loc[:, 'Age'] = X['Age'].fillna(X['Age'].median())\n",
+        "X.loc[:, 'Embarked'] = X['Embarked'].fillna(X['Embarked'].mode()[0])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ixlz4UI1fro6",
-        "outputId": "a64511a5-9882-404f-a17f-c1919e94c131"
+        "id": "Ixlz4UI1fro6"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-3912132974.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  X['Age'].fillna(X['Age'].median(), inplace=True)\n",
-            "/tmp/ipython-input-3912132974.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  X['Embarked'].fillna(X['Embarked'].mode()[0], inplace=True)\n"
-          ]
-        }
-      ]
+      "execution_count": 30,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -492,13 +467,13 @@
         "le_sex = LabelEncoder()\n",
         "le_embarked = LabelEncoder()\n",
         "\n",
-        "X['Sex'] = le_sex.fit_transform(X['Sex'])        # male/female → 0/1\n",
-        "X['Embarked'] = le_embarked.fit_transform(X['Embarked'])\n"
+        "X.loc[:, 'Sex'] = le_sex.fit_transform(X['Sex'])        # male/female → 0/1\n",
+        "X.loc[:, 'Embarked'] = le_embarked.fit_transform(X['Embarked'])"
       ],
       "metadata": {
         "id": "AnFVqaXffve1"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -511,7 +486,7 @@
       "metadata": {
         "id": "lH7reFFbfyw2"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -524,7 +499,7 @@
       "metadata": {
         "id": "dLUIOjJvf1_O"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -540,9 +515,9 @@
         },
         "collapsed": true,
         "id": "q18WSxwwf5iR",
-        "outputId": "e85aefb9-69d3-4a18-ba42-a53d13409951"
+        "outputId": "a0da62eb-a460-45ee-c763-bb5d1158d15e"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,7 +945,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 25
         }
       ]
     },
@@ -985,9 +960,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dCfzif9gf9k3",
-        "outputId": "beffa33e-2d39-4f20-b5c1-247e80acc313"
+        "outputId": "a46f36a8-bcc1-45de-cd5b-b41cde365acb"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1100,37 +1075,15 @@
       "source": [
         "le_sex=LabelEncoder()\n",
         "le_emb=LabelEncoder()\n",
-        "X['Sex']=le_sex.fit_transform(X['Sex'])\n",
-        "X['Embarked'] = le_emb.fit_transform(X['Embarked'])"
+        "X.loc[:, 'Sex']=le_sex.fit_transform(X['Sex'])\n",
+        "X.loc[:, 'Embarked'] = le_emb.fit_transform(X['Embarked'])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "xi0pnQpTx3L7",
-        "outputId": "d645aa23-4482-42b7-aad0-222abb047039"
+        "collapsed": true
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-1203722679.py:3: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  X['Sex']=le_sex.fit_transform(X['Sex'])\n",
-            "/tmp/ipython-input-1203722679.py:4: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  X['Embarked'] = le_emb.fit_transform(X['Embarked'])\n"
-          ]
-        }
-      ]
+      "execution_count": 31,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1323,7 +1276,7 @@
       "metadata": {
         "id": "LmCj3-iW8h8G"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1334,7 +1287,7 @@
       "metadata": {
         "id": "G7XlX-c685Hu"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1348,7 +1301,7 @@
       "metadata": {
         "id": "WBcKMF5f9M9W"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1359,7 +1312,7 @@
       "metadata": {
         "id": "jPJQQmyP9w-N"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1375,9 +1328,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rgy4EIND-MVy",
-        "outputId": "61fbb9c9-5f8e-4636-b601-487905ddf717"
+        "outputId": "04b2a5b5-66d3-48fb-bf6f-a88a1c05a750"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1435,9 +1388,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u_uwrowi-stK",
-        "outputId": "eead73e4-f2fc-4a66-c49d-752045581bd3"
+        "outputId": "0355c63b-c1c1-4e8b-9050-aa7edc424f5b"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1479,7 +1432,7 @@
       "metadata": {
         "id": "MOpP5ORR_wDD"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1494,7 +1447,7 @@
       "metadata": {
         "id": "QV0SI1jm_x_3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1507,7 +1460,7 @@
       "metadata": {
         "id": "TTYhF_ph_7RP"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1523,7 +1476,7 @@
       "metadata": {
         "id": "Dyvujw2e_-3D"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1542,7 +1495,7 @@
         "id": "Mbvmam1SABO7",
         "outputId": "15f4e539-db4f-4034-bfc9-9ab4b26b7e1e"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1587,7 +1540,7 @@
       "metadata": {
         "id": "NJAdloMNAfAz"
       },
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1600,7 +1553,7 @@
       "metadata": {
         "id": "qcTAc85QAjak"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1613,7 +1566,7 @@
       "metadata": {
         "id": "AVsK5AepAoVD"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1634,7 +1587,7 @@
       "metadata": {
         "id": "suc-rOhdAsT2"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1659,7 +1612,7 @@
         "id": "vxeaM8wWAvvU",
         "outputId": "d028e9f7-b28c-48a2-eaf4-b4558c862335"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1677,6 +1630,38 @@
             "   macro avg       0.84      0.80      0.81        81\n",
             "weighted avg       0.83      0.83      0.82        81\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import cross_val_score\n",
+        "\n",
+        "scores = cross_val_score(\n",
+        "    RandomForestClassifier(random_state=42),\n",
+        "    X, y,\n",
+        "    cv=5,\n",
+        "    scoring='accuracy'\n",
+        ")\n",
+        "\n",
+        "print(\"CV Accuracy:\", scores.mean())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pBqUb2IJGoFl",
+        "outputId": "bc4d72b5-d9ae-4e01-8375-24cc09308155"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CV Accuracy: 0.8185185185185183\n"
           ]
         }
       ]
