--- a/My_ML_Practice1.ipynb
+++ b/My_ML_Practice1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfytq7TTE/kOTXEqBET3pS",
+      "authorship_tag": "ABX9TyM1gODQUFkAeer6RSncruY4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -996,7 +996,7 @@
       "metadata": {
         "id": "fFbFOlumwtm7"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -1007,7 +1007,7 @@
       "metadata": {
         "id": "oGYgbSvzxXyA"
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -1019,56 +1019,21 @@
       "metadata": {
         "id": "eyUDMIFkxhk1"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X['Age'].fillna(X['Age'].median(),inplace=True)\n",
-        "X['Embarked'].fillna(X['Embarked'].mode()[0], inplace=True)"
+        "X.loc[:, 'Age'] = X['Age'].fillna(X['Age'].median())\n",
+        "X.loc[:, 'Embarked'] = X['Embarked'].fillna(X['Embarked'].mode()[0])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "collapsed": true,
-        "id": "2ZbydP6zxk_5",
-        "outputId": "29b9b95a-d5fa-4e44-ae4e-e6a74a3e272d"
+        "id": "2ZbydP6zxk_5"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-3315755219.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  X['Age'].fillna(X['Age'].median(),inplace=True)\n",
-            "/tmp/ipython-input-3315755219.py:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  X['Age'].fillna(X['Age'].median(),inplace=True)\n",
-            "/tmp/ipython-input-3315755219.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  X['Embarked'].fillna(X['Embarked'].mode()[0], inplace=True)\n",
-            "/tmp/ipython-input-3315755219.py:2: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  X['Embarked'].fillna(X['Embarked'].mode()[0], inplace=True)\n"
-          ]
-        }
-      ]
+      "execution_count": 49,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1276,7 +1241,7 @@
       "metadata": {
         "id": "LmCj3-iW8h8G"
       },
-      "execution_count": 6,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1287,7 +1252,7 @@
       "metadata": {
         "id": "G7XlX-c685Hu"
       },
-      "execution_count": 7,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -1301,7 +1266,7 @@
       "metadata": {
         "id": "WBcKMF5f9M9W"
       },
-      "execution_count": 8,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1312,7 +1277,7 @@
       "metadata": {
         "id": "jPJQQmyP9w-N"
       },
-      "execution_count": 9,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -1328,9 +1293,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rgy4EIND-MVy",
-        "outputId": "04b2a5b5-66d3-48fb-bf6f-a88a1c05a750"
+        "outputId": "d9ba2ec2-7a08-484a-928b-8bb878ed0b79"
       },
-      "execution_count": 10,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -1364,8 +1329,7 @@
     {
       "cell_type": "code",
       "source": [
-        "new_patient = [[\n",
-        "    55,   # age\n",
+        "new_patient = pd.DataFrame([[55,   # age\n",
         "    1,    # sex (1=male)\n",
         "    2,    # cp\n",
         "    130,  # trestbps\n",
@@ -1378,33 +1342,25 @@
         "    1,    # slope\n",
         "    0,    # ca\n",
         "    2     # thal\n",
-        "]]\n",
+        "]], columns=['Age', 'Sex', 'Chest pain type', 'BP', 'Cholesterol', 'FBS over 120', 'EKG results', 'Max HR', 'Exercise angina', 'ST depression', 'Slope of ST', 'Number of vessels fluro', 'Thallium'])\n",
         "\n",
         "prediction = model.predict(new_patient)\n",
-        "print(\"Heart Disease:\", \"YES\" if prediction[0] == 1 else \"NO\")\n"
+        "print(\"Heart Disease:\", \"YES\" if prediction[0] == 1 else \"NO\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "u_uwrowi-stK",
-        "outputId": "0355c63b-c1c1-4e8b-9050-aa7edc424f5b"
+        "outputId": "d486b8e4-731f-4c72-b515-a5ecd5065156"
       },
-      "execution_count": 11,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Heart Disease: NO\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/sklearn/utils/validation.py:2739: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-            "  warnings.warn(\n"
           ]
         }
       ]
