--- a/My_ML_Practice1.ipynb
+++ b/My_ML_Practice1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1gODQUFkAeer6RSncruY4",
+      "authorship_tag": "ABX9TyP3qmkoEeBy0OxcNXn/E9s3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1113,7 +1113,7 @@
       "metadata": {
         "id": "3vdgsp7H5YQ3"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -1128,7 +1128,7 @@
       "metadata": {
         "id": "mkbsCLW35-_3"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -1141,22 +1141,23 @@
       "metadata": {
         "id": "WcODpJT46T8z"
       },
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model=MLPClassifier(hidden_layer_sizes=(10,),\n",
+        "model=MLPClassifier(\n",
+        "hidden_layer_sizes=(10,),\n",
         "activation='relu',\n",
-        "max_iter=1000,\n",
+        "max_iter=2000, # Re-increased max_iter to allow for convergence\n",
         "random_state=42\n",
         ")"
       ],
       "metadata": {
         "id": "7YdC2KCg6i3D"
       },
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -1171,23 +1172,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_sbYcsR-679B",
-        "outputId": "c67d2e1e-5b94-427a-98eb-3ca039110a3e"
+        "outputId": "cdd1a64a-42dd-4819-c827-a9b3f48e0b5d"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Accuracy: 1.0\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1000) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n"
           ]
         }
       ]
